--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+= Movie Site
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a test app I'm using to figure out +has_many :through+
 
-Things you may want to cover:
+I haven't written any tests, as this is simply a sandbox/demo.
 
-* Ruby version
+== Run
 
-* System dependencies
+To attempt this demo, run the following codes
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+  $ rake db:migrate
+  $ rake db:seed
+  $ rails s
